source/blender/makesrna/intern/rna_nodetree.c
@@ -12441,7 +12441,7 @@ static void rna_def_nodetree(BlenderRNA *brna)
   RNA_def_function_flag(func, FUNC_NO_SELF | FUNC_REGISTER_OPTIONAL);
   parm = RNA_def_string(
       func, "idname", "NodeSocket", MAX_NAME, "Socket Type", "Identifier of the socket type");
-  RNA_def_parameter_flags(parm, PROP_NEVER_NULL, PARM_REQUIRED);
+  RNA_def_parameter_flags(parm, PROP_NEVER_NULL | PROP_THICK_WRAP, PARM_REQUIRED);
   RNA_def_function_return(func, RNA_def_boolean(func, "valid", false, "", ""));
 }
 
